# openalgo-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: rust_sdk.md
examples/: account.rs  options_order.rs  place_order.rs  quotes.rs  test_analyzer.rs  test_api.rs  test_orders.rs  test_websocket.rs  websocket.rs
src/: account.rs  analyzer.rs  client.rs  data.rs  lib.rs  orders.rs  types.rs  utilities.rs  websocket.rs
