[package]
name = "openalgo"
version = "1.0.5"
edition = "2021"
authors = ["Rajandran R"]
description = "A Rust wrapper for the OpenAlgo API with WebSocket support"
license = "MIT"
repository = "https://github.com/marketcalls/openalgo-rust"
documentation = "https://docs.openalgo.in"
readme = "README.md"
keywords = ["openalgo", "trading", "api", "algorithmic-trading", "finance"]
categories = ["api-bindings", "finance"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.5"
log = "0.4"

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.10"

[[example]]
name = "place_order"
path = "examples/place_order.rs"

[[example]]
name = "quotes"
path = "examples/quotes.rs"

[[example]]
name = "websocket"
path = "examples/websocket.rs"

[[example]]
name = "options_order"
path = "examples/options_order.rs"

[[example]]
name = "account"
path = "examples/account.rs"
